2005-07-06 Vladimir Hirsl
	Disabled Add Folder/File button in CPathIncludeSymbolEntryPerFilePage.

	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathEntryMessages.properties
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryPerFilePage.java

2005-07-06 Alain Magloire
	Fix PR 99130: no leading underscore in the guard header name
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewSourceFIleGenerator.java

2005-07-06  Alain Magloire
	PR 102789: Add Include dialog typo
	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties

2005-07-06  Alain Magloire
	PR 102622: OpenIncludeAction improvement, patch from: Robert O'Callahan
	* src/org/eclipse/cdt/internal/ui/OpenIncludeAction.java

2005-07-06  Alain Magloire
	PR 102619: Performance improvement patch from: Robert O'Callahan
	* src/org/eclipse/cdt/ui/CElementContentProvider.java

2005-07-05  Alain Magloire
	Fix for PR 102327: ContentType framework.
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2005-06-29 Alain Magloire
	Fix PR 102159: NPE in the referencesSearchGroup: fillcontextMenu.
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/search/actions/ReferencesSearchGroup.java

2005-06-25 Alain Magloire
	Fix PR 98458: extra semicolon in namespace wizard class.
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java

2005-06-25 Alain Magloire
	Fix for PR 98788: Templates
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementImageProvider.java

2005-06-22 Alain Magloire
	Fix PR 99668 from Craig Watson.
	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java

2005-06-22 Alain Magloire
	Fix PR 100263 from Devin.
	* src/org/eclipse/cdt/internal/ui/preferences/PrefrencesMessages.properties

2005-06-08 Alain Magloire